# gift

backend/lottery/: .env  Cargo.toml  Rocket.toml  build  build.rs  log4rs.yaml  readme.md
backend/lottery/migrations/2024-03-21-092118_problem/: down.sql  up.sql
backend/lottery/src/: main.rs  models.rs  problem_lib.rs  schema.rs
backend/lottery/src/cache/: mod.rs  rediscache.rs
backend/lottery/src/datasource/: mod.rs  mysql_conn.rs
front/gift/: README.md  package-lock.json  package.json
front/gift/src/: App.vue
front/gift/src/router/: index.ts
front/gift/src/views/: Raffe.vue  Rule.vue  Test.vue
