[build-dependencies] 

[package]
name = "lottery"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
redis = "0.16.0"
serde = "1.0.197"
serde_json = "1.0.114"
log4rs = "1.3.0"
log = "0.4.8"
# lazy_static = "1.4.0"
r2d2 = "0.8.10"
r2d2_redis = "0.8.0"
chrono = "0.4"
diesel = { version = "2.0.0", features = ["mysql", "chrono", "serde_json"] }
r2d2_mysql = "23.0.0"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel", "diesel_mysql_pool"] }

[profile.dev]
opt-level = 0
debug = true

